<resources>
    <string name="app_name">ShoppingListNew</string>
    <string name="binding_is_not_init">Binding is not init!</string>
    <string name="authentication_error_message">Something went wrong…</string>
    <string name="authentication_success_message">Authenticated successfully!</string>
    <string name="try_again">Try again</string>
    <string name="created_text">Created:</string>
    <string name="shop_lists_error_message">Failed to get all shop lists!</string>
    <string name="create_a_shopping_list_text">Create a shopping list</string>
    <string name="create_shop_list_hint">Name</string>
    <string name="create_button_text">Create</string>
    <string name="cancel_button_text">Cancel</string>
    <string name="input_error_enter_name">Enter name!</string>
    <string name="remove_shopping_list_text">Are you sure you want remove?</string>
    <string name="remove_shop_list_button_text">Remove</string>
    <string name="more_options_text">More options</string>
    <string name="remove_text">Remove</string>
    <string name="failed_to_remove">Removing failed!</string>
    <string name="my_lists">My lists</string>
    <string name="edit_list">Edit list</string>
    <string name="single_shop_list_error_message">Failed to load a shopping list!</string>
    <string name="cross_text_off">Cross it off</string>
    <string name="failed_to_cross_off">Failed to cross it off!</string>
    <string name="undo_cross_text_off">Undo cross it off</string>
    <string name="add_shop_list_item_text">Adding a shop list item</string>
    <string name="add_shop_list_item_quantity_hint">Quantity</string>
    <string name="add_button_text">Add</string>
    <string name="input_error_enter_quantity">Enter quantity!</string>
    <string name="failed_to_add">Failed to add!</string>
    <string name="share_text">Share</string>
    <string name="shop_list_id_hint">Shoping list ID</string>
    <string name="edit_a_shopping_list_text">Edit a shopping list</string>
    <string name="edit_button_text">Edit</string>
    <string name="your_friend_shop_list">Your friend shop list</string>
    <string name="input_error_enter_list_id">Enter list id!</string>
</resources>